--- a/src/ShortcutWindow.csproj
+++ b/src/ShortcutWindow.csproj
@@ -45,6 +45,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="CommandBridge.cs" />
     <Compile Include="Commands.cs" />
     <Compile Include="Options\General.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
